--- a/style.css
+++ b/style.css
@@ -1,419 +1,118 @@
-.kotakutama {
-    position: fixed;
-    background-color: rgb(36, 36, 36);
-    width: 100%;
-    height: 100%;
+.kotakatasbaru {
+    display: grid;
+    grid-template-columns: 1fr 1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr 1fr;
+    grid-template-rows: 1fr;
+    height: 50px;
+    background-color: #191a1b;
+    align-items: top;
 }
 
-.kotakkiri {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 10%;
-    height: 100%;
-    background-color: #1a1a1a;
-}
-
-.fa-circle-user {
-    position: absolute;
-    top: 50px;
-    left: 14px;
-    color: #ffffff;
-}
-
-.user {
-    position: absolute;
-    top: 29px;
-    left: 38px;
+.itemheader {
+    color: rgb(255, 255, 255);
     text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.line {
-    position: fixed;
-    top: 34px;
-    left: 12px;
-    text-align: center; color: #696969;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-house {
-    position: fixed;
-    top: 105px;
-    left: 9px;
-    color: #ffffff;
-}
-
-.home {
-    position: absolute;
-    top: 9%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-person {
-    position: fixed;
-    top: 133px;
-    left: 11px;
-    color: #ffffff;
-    font-size: 20px;
-}
-
-.profile {
-    position: absolute;
-    top: 12%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-message {
-    position: fixed;
-    top: 166px;
-    left: 9px;
-    color: #ffffff;
-}
-
-.messages {
-    position: absolute;
-    top: 15%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-users {
-    position: fixed;
-    top: 192px;
-    left: 8px;
-    color: #ffffff;
-}
-
-.friends {
-    position: absolute;
-    top: 18%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-street-view {
-    position: fixed;
-    top: 221px;
-    left: 9px;
-    color: #ffffff;
-    font-size: 18px;
-}
-
-.avatar {
-    position: absolute;
-    top: 21%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-toolbox {
-    position: fixed;
-    top: 250px;
-    left: 9px;
-    color: #ffffff;
-}
-
-.inventory {
-    position: absolute;
-    top: 24%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-hand-holding-hand {
-    position: fixed;
-    top: 279px;
-    left: 9px;
-    color: #ffffff;
-}
-
-.trade {
-    position: absolute;
-    top: 27%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-people-group {
-    position: fixed;
-    top: 308px;
-    left: 9px;
-    color: #ffffff;
-}
-
-.groups {
-    position: absolute;
-    top: 30%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-crown {
-    position: fixed;
-    top: 336px;
-    left: 9px;
-    color: #ffffff;
-}
-
-.premium {
-    position: absolute;
-    top: 33%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-comment {
-    position: fixed;
-    top: 365px;
-    left: 11px;
-    color: #ffffff;
-}
-
-.blog {
-    position: absolute;
-    top: 36%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.lorem-ipsum {
-    position: absolute;
-    top: 39%;
-    left: 40px;
-    text-align: left; color: #bebebe;
-    font-size: x-small;
-    font-family: Arial;
-    font-weight: bold;
-}
-
-.fa-cart-shopping {
-    position: fixed;
-    top: 595px;
-    left: 10px;
-    color: #ffffff;
-}
-
-.official-store {
-    position: absolute;
-    top: 60%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.fa-gift {
-    position: fixed;
-    top: 623px;
-    left: 12px;
-    color: #ffffff;
-}
-
-.gift-cards {
-    position: absolute;
-    top: 63%;
-    left: 35px;
-    text-align: center; color: #ffff;
-    font-size: larger;
-    font-family: Arial;
-}
-
-.kotakatas {
-    position: fixed;
-    top: 0px;
-    left: 187px;
-    width: 90%;
-    height: 4%;
-    background-color: #1a1a1a;
-}
-
-.gamename {
-    position: relative;
-    top: -28px;
-    left: -170px;
-    text-align: center; color: #ffff;
+    margin-top: 10px;
     font-size: 30px;
     font-weight: bold;
-    
 }
 
-.home2 {
-    position: absolute;
-    top: -7px;
-    left: 22px;
+.itemtext {
     text-align: center; color: #ffff;
     font-size: large;
     font-family: Arial;
 }
-
-.charts {
-    position: absolute;
-    top: -7px;
-    left: 130px;
-    text-align: center; color: #ffff;
-    font-size: large;
-    font-family: Arial;
+.searchbarbaru {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    height: 0px;
+    align-items: center;
+    gap: 5px;
+    background-color: #ffffff;
 }
 
-.marketplace {
-    position: absolute;
-    top: -7px;
-    left: 250px;
-    text-align: center; color: #ffff;
-    font-size: large;
-    font-family: Arial;
-}
-
-.create {
-    position: absolute;
-    top: -7px;
-    left: 410px;
-    text-align: center; color: #ffff;
-    font-size: large;
-    font-family: Arial;
-}
-
-.currency {
-    position: absolute;
-    top: -7px;
-    left: 525px;
-    text-align: center; color: #ffff;
-    font-size: large;
-    font-family: Arial;
-}
-
-.fa-gear {
-    position: fixed;
-    top: 9px;
-    right: 20px;
-    color: #ffffff;
-    font-size: 23px;
-}
-
-.fa-coins {    
-    position: fixed;
-    top: 9px;
-    right: 90px;
-    color: #ffffff;
-    font-size: 23px;
-}
-
-.amount {
-    position: absolute;
-    top: -1px;
-    right: 67px;
-    text-align: center; color: #ffff;
-    font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.fa-envelope {
-    position: fixed;
-    top: 9px;
-    right: 131px;
-    color: #ffffff;
-    font-size: 23px;
-}
-
-.fa-user-group{
-    position: fixed;
-    top: 11px;
-    right: 170px;
-    color: #ffffff;
-    font-size: 20px;
-}
-
-.fa-bell {
-    position: fixed;
-    top: 11px;
-    right: 210px;
-    color: #ffffff;
-    font-size: 20px;
-}
-
-.fa-id-card {
-    position: fixed;
-    top: 11px;
-    right: 320px;
-    color: #ffffff;
-    font-size: 20px;
-}
-
-.name {
-    position: absolute;
-    top: 1px;
-    right: 255px;
-    text-align: center; color: #eeeeee;
-    font-size: small;
-    font-family: Arial;
-}
-
-.searchbar {
-    position: fixed;
-    top: 5px;
-    left: 797px;
-    width: 22%;
-    height: 27px;
-    background-color: #070707;
-}
-
-.fa-magnifying-glass {
-    position: fixed;
-    top: 11px;
-    left: 802px;
-    color: #858585;
-}
-
-.search {
-    position: absolute;
-    top: -10px;
-    left: 27px;
-    text-align: center; color: #5a5a5a;
+.searchinput {
+    background-color: #ffffff;
+    border: none;
+    height: 30px;
+    color: white;
     font-size: medium;
     font-family: Arial;
 }
 
-.home3 {
-    position: absolute;
-    top: 40px;
-    left: 220px;
-    text-align: center; color: #ffffff;
+.itemicn {
+    display: flex;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-rows: 1fr;
+    gap: 10px;
+    align-items: center;
+    justify-content: end;
+    height: 50px;
+    margin-right: -730px;
+    background-color: #191a1b;
+}
+
+.kotakkiri {
+    display: flex;
+    flex-direction: column;
+    width: 8%;
+    height: 100%;
+    background-color: #191a1b;
+    color: white;
+    padding: 10px;
+}
+.menu {
+    display: flex;
+    flex-direction: row;
+}
+
+.menuwithicon {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+}
+
+.kotakutama {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(36, 36, 36);
+    color: white;
+    padding: 10px;
+}
+
+.utamaheader {
+    color: white;
+    color: #ffff;
     font-size: 30px;
-    font-family: Arial;
     font-weight: bold;
 }
 
-.friend {
-    position: absolute;
-    top: 100px;
-    left: 220px;
-    text-align: center; color: #ffffff;
-    font-size: 16px;
+.utamatext {
+    color: #ffff;
+    font-size: large;
     font-family: Arial;
-    font-weight: bold;
+}
+
+.friendlist {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    padding: 10px;
+}
+
+.bola {
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 200%;
+}
+
+.imgwithtext {
+    
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+    align-items: center;
 }
